# Factory-Cost-Benefit-Analysis-Simulation

./: CMakeLists.txt  CarFactory.cpp  CarFactory.h  ChipFactory.cpp  ChipFactory.h  Employee.cpp  Employee.h  Factories.txt  Factory.cpp  Factory.h  README.md  main.cpp  testing.cpp
